<resources>
    <string name="app_name">GWJ-16</string>
    <string name="c0">4~6um,5um</string>
    <string name="c1">20um</string>
    <string name="c2">20~50um,51~100um,>100um</string>
    <string name="c3">15~25um,>25um</string>
    <string name="c4">≥10um,≥25um</string>
    <string name="c5">请选择下方您需要的粒径通道</string>
    <string name="main0">仪器自检</string>
    <string name="main1">取样器</string>
    <string name="main2">传感器</string>
    <string name="main3">阀</string>
    <string name="menu4">运行日志</string>
    <string name="menu0">检测操作</string>
    <string name="menu1">检测设置</string>
    <string name="menu2">通道设置</string>
    <string name="menu3">清洗操作</string>
    <string name="menu5">通道标定</string>
    <string name="clean4">中止</string>
    <string name="clean2">关机清洗</string>
    <string name="clean0">单次清洗</string>
    <string name="clean5">反冲</string>
    <string name="clean3">继续</string>
    <string name="clean6">返回</string>
    <string name="clean1">开机清洗</string>
    <string name="cltx0">开机清洗：</string>
    <string name="cltx1">2</string>
    <string name="cltx3">3</string>
    <string name="cltx2">关机清洗：</string>
    <string name="cltx4">清洗操作</string>
    <string name="deteopt0">检测设置</string>
    <string name="deteopt1">检测方式</string>
    <string name="deteopt2">取样方式</string>
    <string name="deteopt3">预走量</string>
    <string name="deteopt4">取样量</string>
    <string name="deteopt5">检测次数</string>
    <string name="deteopt6">取样位置</string>
    <string name="deteopt7">计数/ml</string>
    <string name="deteoptb1">返回</string>
    <string name="deteoptb0">保存</string>
    <string name="deteopt8">0.5</string>
    <string name="deteopt9">1.0</string>
    <string name="deteopt10">3</string>
    <string name="deteopt11">10</string>
    <string name="deteopt12">5.0</string>
    <string name="passopt0">通道设置</string>
    <string name="passoptb">返回</string>
    <string name="passopt1">检测标准</string>
    <string name="passopt2">麻醉器具</string>
    <string name="passopt3">8368滤除</string>
    <string name="passopt4">8368_05</string>
    <string name="passopt5">8368_98</string>
    <string name="passopt6">中国药典</string>
    <string name="passopt7">自定义</string>
    <string name="passopt8">粒径通道</string>
    <string name="passoptc0">1.00</string>
    <string name="passoptc1">1.01</string>
    <string name="passoptc2">1.02</string>
    <string name="passoptc3">1.03</string>
    <string name="passoptc4">1.04</string>
    <string name="passoptc5">1.05</string>
    <string name="passoptc6">2.00</string>
    <string name="passoptc7">5.10</string>
    <string name="passoptc8">8.00</string>
    <string name="passoptc9">10.00</string>
    <string name="passoptc10">12.00</string>
    <string name="passoptc11">15.10</string>
    <string name="passoptc12">21.30</string>
    <string name="passoptc13">25.00</string>
    <string name="passoptc14">51.00</string>
    <string name="passoptc15">100.00</string>
    <string name="dete0">检测操作</string>
    <string name="deteb0">开始检测</string>
    <string name="deteb1">历史数据</string>
    <string name="deteb2">打印设置</string>
    <string name="deteb3">返回</string>
    <string name="dete1">当前设置信息</string>
    <string name="dete2">检测标准:</string>
    <string name="dete3">预走量:</string>
    <string name="dete4">检测方式:</string>
    <string name="dete5">取样量:</string>
    <string name="dete6">取样方式:</string>
    <string name="dete7">次 数:</string>
    <string name="dete8">加压数值:</string>
    <string name="dete9">计数/ml:</string>
    <string name="dete10">自定义</string>
    <string name="dete11">1.0</string>
    <string name="dete12">自动</string>
    <string name="dete13">1.0</string>
    <string name="dete14">自动</string>
    <string name="dete15">2</string>
    <string name="dete16">90</string>
    <string name="dete17">5.0</string>
    <string name="startb">数据查询</string>
    <string name="start0">开始检测</string>
    <string name="start1">粒 径</string>
    <string name="start2">微 分</string>
    <string name="start3">积 分</string>
    <string name="start4">粒 径</string>
    <string name="start5">微 分</string>
    <string name="start6">积 分</string>
    <string name="start7">时 间：</string>
    <string name="start8">time</string>
    <string name="start9">取 样 量：</string>
    <string name="start10">1.0</string>
    <string name="start11">检测次数</string>
    <string name="start12">1</string>
    <string name="optb">返回</string>
    <string name="dsb0">下页</string>
    <string name="dsb1">均值</string>
    <string name="dsb2">删除</string>
    <string name="dsb3">清空</string>
    <string name="dsb4">存储</string>
    <string name="dsb5">打印</string>
    <string name="dsb6">返回</string>
    <string name="ds0">数据查询</string>
    <string name="ds1">粒  径</string>
    <string name="ds2">微  分</string>
    <string name="ds3">积  分</string>
    <string name="ds4">粒  径</string>
    <string name="ds5">微  分</string>
    <string name="ds6">积  分</string>
    <string name="ds7">实验名称：</string>
    <string name="ds8">标准：</string>
    <string name="ds9">自定义</string>
    <string name="ds10">单位：</string>
    <string name="ds11">个/5ml</string>
    <string name="ds12">次数：</string>
    <string name="ds13">1</string>
    <string name="ds14">体积：</string>
    <string name="ds15">1.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
