<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pass_opt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/passopt_bg"
    android:orientation="vertical"
    tools:context="com.tdtf.weili.activity.PassOpt">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_power_11"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="600dp"
            android:text="TextView"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_user_11"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:text="TextView"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_press_9"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="压力："
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextClock
            android:id="@+id/textClock9"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rBtnmazui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/passopt2"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/rBtnlvchu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:button="@null"
                android:text="@string/passopt3"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/rBtn05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:button="@null"
                android:text="@string/passopt4"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/rBtn98"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:button="@null"
                android:text="@string/passopt5"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/rBtnzgyd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:button="@null"
                android:text="@string/passopt6"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/rBtncustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:button="@null"
                android:text="@string/passopt7"
                android:textSize="24sp" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/passFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="70dp"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/linecheck"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passoptc0"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passoptc1"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passoptc2"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/checkBox4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passoptc3"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkBox5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passoptc4"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/checkBox6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passoptc5"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/checkBox7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passoptc6"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/checkBox8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passoptc7"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkBox9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passoptc8"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/checkBox10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passoptc9"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/checkBox11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passoptc10"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/checkBox12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passoptc11"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkBox13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/passoptc12"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/checkBox14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/passoptc13"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/checkBox15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/passoptc14"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/checkBox16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/passoptc15"
                        android:textSize="24sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_pass_save"
            android:layout_width="144dp"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="79dp"
            android:background="@drawable/button_yes" />

        <Button
            android:id="@+id/btn_define"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="183dp"
            android:background="@drawable/button_passopt"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnback"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="144dp"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="184dp"
            android:background="@drawable/button_no" />

    </LinearLayout>

</LinearLayout>
