<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start_work"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/starkwork_bg"
    android:orientation="vertical"
    tools:context="com.tdtf.weili.activity.StartWork">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_power_15"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="600dp"
            android:text="TextView"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_user_15"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:text="TextView"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textpress"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="压力："
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextClock
            android:id="@+id/textClock11"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragscan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView31"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/start7"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/start8"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/start9"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_quyang"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/start10"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView86"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="次  数："
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_num"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btngogo"
            android:layout_width="144dp"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="96dp"
            android:background="@drawable/button_go" />

        <Button
            android:id="@+id/btnPressure"
            android:layout_width="144dp"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="96dp"
            android:text="加压"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnRelease"
            android:layout_width="144dp"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="96dp"
            android:text="排气"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnstop"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="144dp"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_stop" />

    </LinearLayout>

</LinearLayout>
